# asgmd-05-df

./: .gitignore  pipeline.py  pyproject.toml  requirements.txt
apps/: main.py
artifacts/: logistic_regression_pipeline.pkl
utils_folder/: helper.py
